Add: Previous Prediction

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description"
       content="An app that efficiently predicts the possible diseases or health conditions based on your symptopms." />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700;900&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
